objects/Analysis__c.object
<CustomObject>
    <fields>
        <fullName>CREATEDDATE_old__c</fullName>
        <label>CREATEDDATE_old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Excel_Ergebnis_B26__c</fullName>
        <label>Excel Ergebnis!B26</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excel_Ergebnis_B46__c</fullName>
        <label>Excel Ergebnis!B46</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_old__c</fullName>
        <label>ID_old</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Potentialberechnung_ID__c</fullName>
        <label>Old Potentialberechnung ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Potentialberechnungen</relationshipLabel>
        <relationshipName>Potentialanalysen</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PotenImpID__c</fullName>
        <externalId>true</externalId>
        <label>PotenImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Object for storing and managing potential analysis.</description>
    <label>Potentialberechnung</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Potentialberechnungen</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>